<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="main">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="team">Команда</string>
    <string name="title_team">Над приложением работали</string>
    <string name="name1">Ермолов Евгений</string>
    <string name="name2">Маркович Никита</string>
    <string name="name3">Ермаков Сергей</string>
    <string name="name4">Сальников Артём</string>
    <string name="vacancy_name">Название вакансии</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="vacancy_company">Компания</string>
    <string name="vacancy_money">Деньжата</string>
    <string name="error_getting_vacancies">Не удалось получить список вакансий</string>
    <string name="error_empty_list">Список пуст</string>
    <string name="search_vacancy">Поиск вакансий</string>
    <string name="search_request">Введите запрос</string>
    <string name="no_vacancy">Таких вакансий нет</string>
    <string name="no_list_vacancies">Не удалось получить \n список вакансий</string>
    <string name="no_internet">Нет интернета</string>


    <!-- FILTERS -->
    <string name="workplace">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="filter_settings">Настройки фильтрации</string>
    <string name="chose_country">Выбор страны</string>
    <string name="chose_region">Выбор региона</string>
    <string name="chose_industry">Выбор отрасли</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="enter_region">Введите регион</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="choose">Выбрать</string>
    <string name="apply">Применить</string>
    <string name="remove">Сбросить</string>
    <string name="dont_show_without_salary">Не показывать без зарплаты</string>
    <string name="choosing_place_of_work">Выбор места работы</string>
    <string name="failed_to_get_list">Не удалось получить \n список</string>
    <string name="no_such_region">Такого региона нет</string>
    <string name="industry_not_found">Такой отрасли нет</string>
    <string name="divider">, </string>

    <!-- Vacancy details -->
    <string name="job">Работа</string>
    <string name="salary">Заработная плата</string>
    <string name="company">Компания</string>
    <string name="experience">Требуемый опыт</string>
    <string name="city">Город</string>
    <string name="description">Описание вакансии</string>
    <string name="skills">Ключевые навыки</string>
    <string name="contacts">Контакты</string>
    <string name="contact_person">Контактное лицо</string>
    <string name="data">Данные</string>
    <string name="email">E-mail</string>
    <string name="phone">Телефон</string>
    <string name="comment">Комментарий</string>
    <string name="vacancy">Вакансия</string>
    <string name="todo">Сделать</string>
    <string name="error">Ошибка</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="similar_vacancies">Похожие вакансии</string>
    <string name="found_x_vacancies">Найдено %d вакансий</string>
    <string name="there_are_no_such_vacs">Таких вакансий нет</string>
    <string name="uri_mailto">mailto:</string>
    <string name="text_plain">text/plain</string>
    <string name="tel">tel:%1$s</string>
    <string name="vacancy_salary_from_to">от %1$s до %2$s</string>
    <string name="vacancy_salary_from">от %1$s</string>
    <string name="vacancy_salary_to">до %1$s</string>
    <string name="vacancy_salary_not_specified">зарплата не указана</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="rur">RUR</string>
    <string name="azn">AZN</string>
    <string name="byr">BYR</string>
    <string name="gel">GEL</string>
    <string name="kgs">KGS</string>
    <string name="kzt">KZT</string>
    <string name="uah">UAH</string>
    <string name="uzs">UZS</string>
    <string name="euro_get">%1$s €</string>
    <string name="dollar_get">%1$s $</string>
    <string name="rub_get">%1$s ₽</string>
    <string name="azn_get">%1$s ₼</string>
    <string name="br_get">%1$s Br</string>
    <string name="gel_get">%1$s ₾</string>
    <string name="kgs_get">%1$s с</string>
    <string name="kzt_get">%1$s ₸</string>
    <string name="uah_get">%1$s ₴</string>
    <string name="uzs_get">%1$s Soʻm</string>
    <string name="space">" "</string>
</resources>
