<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp">

    <FrameLayout
        android:layout_marginStart="16dp"
        android:layout_width="48dp"
        android:layout_height="48dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_toast"
            android:contentDescription="@string/vacancy_name"
            tools:src="@tools:sample/avatars"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextStyleMedium22_500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnPrimary"
            tools:text="@string/vacancy_description" />

        <TextView
            android:id="@+id/tv_name_company"
            style="@style/TextStyleRegular16_400"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:textColor="?attr/colorOnPrimary"
            tools:text="@string/vacancy_company" />

        <TextView
            android:id="@+id/tv_salary"
            style="@style/TextStyleRegular16_400"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:textColor="?attr/colorOnPrimary"
            tools:text="@string/vacancy_money" />
    </LinearLayout>
</LinearLayout>
