<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/screens_background"
    android:id="@+id/vacancy_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:backgroundTint="?attr/colorOnSecondary"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/fragment_notifications"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/vacancy_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_16"
                android:visibility="visible">

                <TextView
                    android:id="@+id/job"
                    style="@style/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="64dp"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:paddingRight="@dimen/margin_16"
                    android:fontFamily="@font/ys_display_bold"
                    android:text="@string/job"
                    android:textSize="@dimen/font_size_32"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/salary"
                    style="@style/title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ys_display_medium"
                    android:layout_marginStart="@dimen/margin_16"
                    android:text="@string/salary"
                    android:textSize="@dimen/font_size_22"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/job" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/light_gray"
                    app:cardCornerRadius="12dp"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginRight="@dimen/margin_16"
                    app:layout_constraintEnd_toEndOf="@id/vacancy_constraint_layout"
                    app:layout_constraintStart_toStartOf="@id/vacancy_constraint_layout"
                    app:layout_constraintTop_toBottomOf="@id/salary">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/logo"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_margin="16dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_launcher_round" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/company"
                                style="@style/medium_text_style"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ys_display_bold"
                                android:text="@string/company"
                                android:textColor="@color/black"
                                tools:text="ИП Иванов А.А." />

                            <TextView
                                android:id="@+id/city"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/ys_display_regular"
                                android:text="@string/city"
                                android:textColor="@color/black"
                                tools:text="Пермь" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/experience_required"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/ys_display_bold"
                    android:text="@string/experience"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/card_view" />

                <TextView
                    android:id="@+id/experience_years"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ys_display_regular"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/experience_required" />

                <TextView
                    android:id="@+id/conditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ys_display_regular"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/experience_years" />

                <TextView
                    android:id="@+id/vacancy_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/ys_display_bold"
                    android:text="@string/description"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_22"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/conditions" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="@dimen/margin_16"
                    android:paddingEnd="@dimen/margin_16"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="@id/card_view"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/vacancy_description"
                    tools:itemCount="5" />


                <TextView
                    android:id="@+id/skills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ys_display_bold"
                    android:text="@string/skills"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_22"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/tv_description" />

                <TextView
                    android:id="@+id/skills_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="@dimen/margin_16"
                    android:paddingEnd="@dimen/margin_16"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="@id/card_view"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/skills"
                    tools:itemCount="5" />

                <TextView
                    android:id="@+id/contact_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/ys_display_bold"
                    android:text="@string/contacts"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_22"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/skills_recycler_view" />

                <TextView
                    android:id="@+id/contact_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/ys_display_bold"
                    android:text="@string/contact_person"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/contact_information" />

                <TextView
                    android:id="@+id/contact_person_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/data"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/contact_person" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/ys_display_bold"
                    android:text="@string/email"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/contact_person_description" />

                <TextView
                    android:id="@+id/email_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/data"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/email" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/ys_display_bold"
                    android:text="@string/phone"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/email_description" />

                <TextView
                    android:id="@+id/phone_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/data"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/phone" />

                <TextView
                    android:id="@+id/comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/ys_display_bold"
                    android:text="@string/comment"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/phone_description" />

                <TextView
                    android:id="@+id/comment_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/ys_display_regular"
                    android:lines="2"
                    android:text="@string/data"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="@dimen/font_size_16"
                    app:layout_constraintStart_toStartOf="@id/card_view"
                    app:layout_constraintTop_toBottomOf="@id/comment" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/vacancy_toolbars"
                style="@style/TextStyleToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/android:windowBackground"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/arrow_back_16x16"
                app:title="@string/vacancy">

                <ImageView
                    android:id="@+id/button_add_to_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:contentDescription="@string/todo"
                    android:paddingEnd="@dimen/font_size_16"
                    android:src="@drawable/ic_add_to_favorites"
                    android:visibility="visible"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/button_delete_from_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:contentDescription="@string/todo"
                    android:paddingEnd="@dimen/font_size_16"
                    android:src="@drawable/ic_added_to_favorites"
                    android:visibility="gone"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/button_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_share"
                    tools:ignore="RtlSymmetry" />

            </androidx.appcompat.widget.Toolbar>
        </FrameLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/server_error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="66dp"
        android:visibility="gone">


        <ImageView
            android:id="@+id/iv_server_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:textColor="?attr/colorOnPrimary"
            android:src="@drawable/ic_server_error" />

        <TextView
            android:id="@+id/tv_server_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/ys_display_bold"
            android:text="@string/server_error"
            android:textSize="@dimen/font_size_22" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

